samples/_failures_safe/1761308550_e27f4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70571987.c: In function ‘main’:
./samples/SAFE/__tmp_70571987.c:150:5: error: expected declaration or statement at end of input
  150 |     char input_text[1024];
      |     ^~~~
